# onster

./: CMakeLists.txt
src/: linux_onster.c  linux_onster.cc  onster.cc  onster.h  onster_gl.cc  onster_math.h  onster_render.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
